# RestInBeast

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/rest_in_beast/: server.hpp  template.hpp
include/rest_in_beast/detail/: logger.hpp  respondent.hpp  session.hpp  template_iterator.hpp
include/rest_in_beast/util/: hasher.hpp  shared_proxy.hpp
test/: server.cpp  template.cpp
test/support/: test_asio_thread.hpp  test_clients.hpp  test_logger.hpp  test_requests.hpp  test_respondent.hpp  test_signal_handler.hpp  test_ssl_util.hpp
